--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,3 +1,11 @@
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers:
+      - http://localhost:9092
+      - http://kafka:9092
+
+eureka:
+  service-url:
+    defaultZone:
+      - http://discovery-service:8761/eureka
+      - http://127.0.0.1:8761/eureka
