--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
     name: config-service
   cloud:
     config:
+      enabled: true
       server:
         git:
           uri: https://github.com/lotteon2/FLOWERGARDEN.CONFIG.git
