--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,5 +3,10 @@ spring:
     bootstrap-servers: http://kafka:9092
 
 eureka:
-  service-url:
-    defaultZone: http://discovery-service:8761/eureka
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://discovery-service:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${server.port}
