--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,10 @@
 spring:
-  kafka:
-    bootstrap-servers: localhost:9092
+  cloud:
+    stream:
+      kafka:
+        binder:
+          default-broker-port: localhost:9092
+          brokers: localhost:9092
 
 eureka:
   client:
