--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation "org.springframework.cloud:spring-cloud-starter-bus-kafka"
-    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.2.1.RELEASE'
-
+    implementation 'org.springframework.kafka:spring-kafka'
 }
 
 dependencyManagement {
