--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,10 @@
 spring:
-#  cloud:
-#    stream:
-#      kafka:
-#        binder:
-#          default-broker-port: kafka:9093
-#          brokers: kafka:9093
+  cloud:
+    stream:
+      kafka:
+        binder:
+          default-broker-port: kafka:9093
+          brokers: kafka:9093
   kafka:
     producer:
       bootstrap-servers: kafka:9093
