:wrench: Amend kafka config

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation "org.springframework.cloud:spring-cloud-starter-bus-kafka"
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka:2.2.1.RELEASE'
+
 }
 
 dependencyManagement {
