--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,20 +1,11 @@
 spring:
-  #  cloud:
-  #    stream:
-  #      kafka:
-  #        binder:
-  #          default-broker-port: localhost:9092
-  #          brokers: localhost:9092
-  kafka:
-    producer:
-      bootstrap-servers: localhost:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-    consumer:
-      bootstrap-servers: localhost:9092
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      group-id: config-topic
+  cloud:
+    stream:
+      kafka:
+        binder:
+          default-broker-port: localhost:9092
+          brokers: localhost:9092
+
 eureka:
   client:
     register-with-eureka: true
