:wrench: Amend application yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,7 @@ management:
           - "bus-refresh"
 encrypt:
   key: ${secret}
+logging:
+  level:
+    org.apache.kafka: WARN
+    org.springframework.kafka: WARN
